crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-sqlite[memory]_clickbench_q8_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q8"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                        |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                                                                                                                   |
|               |  Sort: count(*) DESC NULLS FIRST                                                                                                                                                                                                                            |
|               |   Projection: hits.AdvEngineID, count(Int64(1)) AS count(*)                                                                                                                                                                                                 |
|               |     Aggregate: groupBy=[[hits.AdvEngineID]], aggr=[[count(Int64(1))]]                                                                                                                                                                                       |
|               |       TableScan: hits projection=[AdvEngineID], full_filters=[CAST(hits.AdvEngineID AS Int64) != Int64(0)]                                                                                                                                                  |
| physical_plan | SchemaCastScanExec                                                                                                                                                                                                                                          |
|               |   CooperativeExec                                                                                                                                                                                                                                           |
|               |     BytesProcessedExec                                                                                                                                                                                                                                      |
|               |       VirtualExecutionPlan name=sqlite compute_context=memory base_sql=SELECT `hits`.`AdvEngineID`, count(1) AS `count(*)` FROM `hits` WHERE (CAST(`hits`.`AdvEngineID` AS BIGINT) <> 0) GROUP BY `hits`.`AdvEngineID` ORDER BY `count(*)` DESC NULLS FIRST |
|               |                                                                                                                                                                                                                                                             |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
