crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-sqlite[memory]_clickbench_q9_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q9"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                  |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                                                                             |
|               |  Limit: skip=0, fetch=10                                                                                                                                                                                              |
|               |   Sort: u DESC NULLS FIRST                                                                                                                                                                                            |
|               |     Projection: hits.RegionID, count(DISTINCT hits.UserID) AS u                                                                                                                                                       |
|               |       Aggregate: groupBy=[[hits.RegionID]], aggr=[[count(DISTINCT hits.UserID)]]                                                                                                                                      |
|               |         TableScan: hits projection=[RegionID, UserID]                                                                                                                                                                 |
| physical_plan | SchemaCastScanExec                                                                                                                                                                                                    |
|               |   CooperativeExec                                                                                                                                                                                                     |
|               |     BytesProcessedExec                                                                                                                                                                                                |
|               |       VirtualExecutionPlan name=sqlite compute_context=memory base_sql=SELECT `hits`.`RegionID`, count(DISTINCT `hits`.`UserID`) AS `u` FROM `hits` GROUP BY `hits`.`RegionID` ORDER BY `u` DESC NULLS FIRST LIMIT 10 |
|               |                                                                                                                                                                                                                       |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
