crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-turso[file]_clickbench_q10_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q10"
---
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                   |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                                                                                                                                              |
|               |  Limit: skip=0, fetch=10                                                                                                                                                                                                                                                               |
|               |   Sort: c DESC NULLS FIRST                                                                                                                                                                                                                                                             |
|               |     Projection: hits.RegionID, sum(hits.AdvEngineID), count(Int64(1)) AS c, avg(hits.ResolutionWidth), count(DISTINCT hits.UserID)                                                                                                                                                     |
|               |       Aggregate: groupBy=[[hits.RegionID]], aggr=[[sum(hits.AdvEngineID), count(Int64(1)), avg(hits.ResolutionWidth), count(DISTINCT hits.UserID)]]                                                                                                                                    |
|               |         TableScan: hits projection=[RegionID, UserID, ResolutionWidth, AdvEngineID]                                                                                                                                                                                                    |
| physical_plan | SchemaCastScanExec                                                                                                                                                                                                                                                                     |
|               |   CooperativeExec                                                                                                                                                                                                                                                                      |
|               |     BytesProcessedExec                                                                                                                                                                                                                                                                 |
|               |       VirtualExecutionPlan name=hits compute_context=//data/hits.turso base_sql=SELECT `hits`.`RegionID`, sum(`hits`.`AdvEngineID`), count(1) AS `c`, avg(`hits`.`ResolutionWidth`), count(DISTINCT `hits`.`UserID`) FROM `hits` GROUP BY `hits`.`RegionID` ORDER BY `c` DESC LIMIT 10 |
|               |                                                                                                                                                                                                                                                                                        |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
