crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-turso[file]_clickbench_q11_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q11"
---
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                   |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                                                                                                                                              |
|               |  Limit: skip=0, fetch=10                                                                                                                                                                                                                                                               |
|               |   Sort: u DESC NULLS FIRST                                                                                                                                                                                                                                                             |
|               |     Projection: hits.MobilePhoneModel, count(DISTINCT hits.UserID) AS u                                                                                                                                                                                                                |
|               |       Aggregate: groupBy=[[hits.MobilePhoneModel]], aggr=[[count(DISTINCT hits.UserID)]]                                                                                                                                                                                               |
|               |         TableScan: hits projection=[UserID, MobilePhoneModel], full_filters=[hits.MobilePhoneModel != Utf8("")]                                                                                                                                                                        |
| physical_plan | SchemaCastScanExec                                                                                                                                                                                                                                                                     |
|               |   CooperativeExec                                                                                                                                                                                                                                                                      |
|               |     BytesProcessedExec                                                                                                                                                                                                                                                                 |
|               |       VirtualExecutionPlan name=hits compute_context=//data/hits.turso base_sql=SELECT `hits`.`MobilePhoneModel`, count(DISTINCT `hits`.`UserID`) AS `u` FROM `hits` WHERE (`hits`.`MobilePhoneModel` <> '') GROUP BY `hits`.`MobilePhoneModel` ORDER BY `u` DESC NULLS FIRST LIMIT 10 |
|               |                                                                                                                                                                                                                                                                                        |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
