crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-turso[file]_clickbench_q12_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q12"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                               |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                                                                                                                                                                                          |
|               |  Limit: skip=0, fetch=10                                                                                                                                                                                                                                                                                                           |
|               |   Sort: u DESC NULLS FIRST                                                                                                                                                                                                                                                                                                         |
|               |     Projection: hits.MobilePhone, hits.MobilePhoneModel, count(DISTINCT hits.UserID) AS u                                                                                                                                                                                                                                          |
|               |       Aggregate: groupBy=[[hits.MobilePhone, hits.MobilePhoneModel]], aggr=[[count(DISTINCT hits.UserID)]]                                                                                                                                                                                                                         |
|               |         TableScan: hits projection=[UserID, MobilePhone, MobilePhoneModel], full_filters=[hits.MobilePhoneModel != Utf8("")]                                                                                                                                                                                                       |
| physical_plan | SchemaCastScanExec                                                                                                                                                                                                                                                                                                                 |
|               |   CooperativeExec                                                                                                                                                                                                                                                                                                                  |
|               |     BytesProcessedExec                                                                                                                                                                                                                                                                                                             |
|               |       VirtualExecutionPlan name=hits compute_context=//data/hits.turso base_sql=SELECT `hits`.`MobilePhone`, `hits`.`MobilePhoneModel`, count(DISTINCT `hits`.`UserID`) AS `u` FROM `hits` WHERE (`hits`.`MobilePhoneModel` <> '') GROUP BY `hits`.`MobilePhone`, `hits`.`MobilePhoneModel` ORDER BY `u` DESC NULLS FIRST LIMIT 10 |
|               |                                                                                                                                                                                                                                                                                                                                    |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
