crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-turso[file]_clickbench_q14_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q14"
---
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                           |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                                                                                                                      |
|               |  Limit: skip=0, fetch=10                                                                                                                                                                                                                                       |
|               |   Sort: u DESC NULLS FIRST                                                                                                                                                                                                                                     |
|               |     Projection: hits.SearchPhrase, count(DISTINCT hits.UserID) AS u                                                                                                                                                                                            |
|               |       Aggregate: groupBy=[[hits.SearchPhrase]], aggr=[[count(DISTINCT hits.UserID)]]                                                                                                                                                                           |
|               |         TableScan: hits projection=[UserID, SearchPhrase], full_filters=[hits.SearchPhrase != Utf8("")]                                                                                                                                                        |
| physical_plan | SchemaCastScanExec                                                                                                                                                                                                                                             |
|               |   CooperativeExec                                                                                                                                                                                                                                              |
|               |     BytesProcessedExec                                                                                                                                                                                                                                         |
|               |       VirtualExecutionPlan name=hits compute_context=//data/hits.turso base_sql=SELECT `hits`.`SearchPhrase`, count(DISTINCT `hits`.`UserID`) AS `u` FROM `hits` WHERE (`hits`.`SearchPhrase` <> '') GROUP BY `hits`.`SearchPhrase` ORDER BY `u` DESC LIMIT 10 |
|               |                                                                                                                                                                                                                                                                |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
