crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-turso[file]_clickbench_q15_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q15"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                  |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                                                                                                                                                             |
|               |  Limit: skip=0, fetch=10                                                                                                                                                                                                                                                                              |
|               |   Sort: c DESC NULLS FIRST                                                                                                                                                                                                                                                                            |
|               |     Projection: hits.SearchEngineID, hits.SearchPhrase, count(Int64(1)) AS c                                                                                                                                                                                                                          |
|               |       Aggregate: groupBy=[[hits.SearchEngineID, hits.SearchPhrase]], aggr=[[count(Int64(1))]]                                                                                                                                                                                                         |
|               |         TableScan: hits projection=[SearchEngineID, SearchPhrase], full_filters=[hits.SearchPhrase != Utf8("")]                                                                                                                                                                                       |
| physical_plan | SchemaCastScanExec                                                                                                                                                                                                                                                                                    |
|               |   CooperativeExec                                                                                                                                                                                                                                                                                     |
|               |     BytesProcessedExec                                                                                                                                                                                                                                                                                |
|               |       VirtualExecutionPlan name=hits compute_context=//data/hits.turso base_sql=SELECT `hits`.`SearchEngineID`, `hits`.`SearchPhrase`, count(1) AS `c` FROM `hits` WHERE (`hits`.`SearchPhrase` <> '') GROUP BY `hits`.`SearchEngineID`, `hits`.`SearchPhrase` ORDER BY `c` DESC NULLS FIRST LIMIT 10 |
|               |                                                                                                                                                                                                                                                                                                       |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
