crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-turso[file]_clickbench_q16_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q16"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                  |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                                                             |
|               |  Limit: skip=0, fetch=10                                                                                                                                                                              |
|               |   Sort: count(*) DESC NULLS FIRST                                                                                                                                                                     |
|               |     Projection: hits.UserID, count(Int64(1)) AS count(*)                                                                                                                                              |
|               |       Aggregate: groupBy=[[hits.UserID]], aggr=[[count(Int64(1))]]                                                                                                                                    |
|               |         TableScan: hits projection=[UserID]                                                                                                                                                           |
| physical_plan | SchemaCastScanExec                                                                                                                                                                                    |
|               |   CooperativeExec                                                                                                                                                                                     |
|               |     BytesProcessedExec                                                                                                                                                                                |
|               |       VirtualExecutionPlan name=hits compute_context=//data/hits.turso base_sql=SELECT `hits`.`UserID`, count(1) AS `count(*)` FROM `hits` GROUP BY `hits`.`UserID` ORDER BY `count(*)` DESC LIMIT 10 |
|               |                                                                                                                                                                                                       |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
